[package]
name = "random_graphs"
version = "0.1.1"
authors = ["Robert Usher <266585+dcchut@users.noreply.github.com>"]
edition = "2018"
description = "A library for generating random graphs"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dcchut/random_graphs"

[dependencies]
thiserror = "1.0"
petgraph = "0.5"
rand = "0.7"
itertools = "0.9"
num-integer = "0.1"